dropdown menu, animations and Hot FiX z-index's

--- a/css/sass/components/_comments.scss
+++ b/css/sass/components/_comments.scss
@@ -5,7 +5,7 @@
     height: 100%;
     margin: 0 auto !important;
     padding-bottom: 150px;
-    z-index: 999;
+    z-index: 2;
     position: relative;
     .header {
         width: 400px;
