--- a/css/sass/components/_navigation.scss
+++ b/css/sass/components/_navigation.scss
@@ -26,7 +26,7 @@
             }
         }
         .items-box {
-            width: 400px;
+            width: auto;
             height: 100%;
             ul {
                 list-style: none;
@@ -109,6 +109,62 @@
                         &:after {
                             bottom: 0;
                             transform: rotate3d(0, 0, 1, -45deg);
+                        }
+                    }
+                    .dropdown-holder {
+                        position: relative;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        top: -10px;
+                        height: 30px;
+                        i {
+                            padding-left: 15px;
+                        }
+                        .user-img {
+                            width: 40px;
+                            height: 40px;
+                            border: 3px solid #DDA288;
+                            border-radius: 50%;
+                            display: inline-block;
+                            margin-right: 15px !important;
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                border-radius: 50%;
+                            }
+                        }
+                    }
+                    &:hover > ul,
+                    &:focus-within > ul {
+                        visibility: visible;
+                        opacity: 1;
+                        display: block;
+                    }
+                    ul {
+                        visibility: hidden;
+                        opacity: 0;
+                        min-width: 3rem;
+                        position: absolute;
+                        transition: all 0.5s ease;
+                        top: 2.5rem;
+                        left: 0;
+                        right: 0;
+                        display: none;
+                        &:hover,
+                        &:focus {
+                            visibility: visible;
+                            opacity: 1;
+                            display: block;
+                        }
+                        li {
+                            clear: both;
+                            width: 100%;
+                            border-top: 3px solid #8593ae;
+                            background: rgba($color: #DDA288, $alpha: 0.9);
+                            a {
+                                font-size: 1.2em;
+                            }
                         }
                     }
                 }
