--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ li {
   height: 100%;
   margin: 0 auto !important;
   padding-bottom: 150px;
-  z-index: 999;
+  z-index: 2;
   position: relative;
 }
 .comments .header {
@@ -363,7 +363,7 @@ li {
   transform: scale(1.1);
 }
 .navigation .nav-box .items-box {
-  width: 400px;
+  width: auto;
   height: 100%;
 }
 .navigation .nav-box .items-box ul {
@@ -452,6 +452,60 @@ li {
 .navigation .nav-box .items-box ul li .iconOn:after {
   bottom: 0;
   transform: rotate3d(0, 0, 1, -45deg);
+}
+.navigation .nav-box .items-box ul li .dropdown-holder {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -10px;
+  height: 30px;
+}
+.navigation .nav-box .items-box ul li .dropdown-holder i {
+  padding-left: 15px;
+}
+.navigation .nav-box .items-box ul li .dropdown-holder .user-img {
+  width: 40px;
+  height: 40px;
+  border: 3px solid #DDA288;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 15px !important;
+}
+.navigation .nav-box .items-box ul li .dropdown-holder .user-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.navigation .nav-box .items-box ul li:hover > ul, .navigation .nav-box .items-box ul li:focus-within > ul {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+}
+.navigation .nav-box .items-box ul li ul {
+  visibility: hidden;
+  opacity: 0;
+  min-width: 3rem;
+  position: absolute;
+  transition: all 0.5s ease;
+  top: 2.5rem;
+  left: 0;
+  right: 0;
+  display: none;
+}
+.navigation .nav-box .items-box ul li ul:hover, .navigation .nav-box .items-box ul li ul:focus {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+}
+.navigation .nav-box .items-box ul li ul li {
+  clear: both;
+  width: 100%;
+  border-top: 3px solid #8593ae;
+  background: rgba(221, 162, 136, 0.9);
+}
+.navigation .nav-box .items-box ul li ul li a {
+  font-size: 1.2em;
 }
 .navigation .nav-box .items-box ul .menu-iconOn {
   border: 2px solid #7E675E;
@@ -2093,7 +2147,7 @@ li {
   grid-auto-rows: auto;
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   grid-gap: 3em;
-  z-index: 999;
+  z-index: 2;
   padding-bottom: 50px;
 }
 .find-tips-container .tips-grid .grid .tip-card {
